--- a/vistas/plugins/daterangepicker/daterangepicker.css
+++ b/vistas/plugins/daterangepicker/daterangepicker.css
@@ -1,7 +1,7 @@
 .daterangepicker {
   position: absolute;
   color: inherit;
-  background-color: #d1c4e9;
+  background-color: #F0F0F0;
   border-radius: 4px;
   width: 278px;
   padding: 4px;
@@ -22,7 +22,7 @@
   .daterangepicker:after {
     top: -6px;
     border-right: 6px solid transparent;
-    border-bottom: 6px solid #d1c4e9;
+    border-bottom: 6px solid #F0F0F0;
     border-left: 6px solid transparent; }
   .daterangepicker.opensleft:before {
     right: 9px; }
@@ -32,7 +32,7 @@
     left: 0;
     right: 0;
     width: 0;
-    margin-left: auto;
+    margin-left: auto;  
     margin-right: auto; }
   .daterangepicker.openscenter:after {
     left: 0;
